@startuml
'https://plantuml.com/class-diagram

title 敌机工厂模式

abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + {abstract} activate(HeroAircraft hero)
}

interface PropFactory {
    + {abstract} createProp(int locationX, int locationY): AbstractProp
}

abstract class EnemyAircraft {
    + EnemyAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + {abstract} getScore():int
    + {abstract} getProps():List<AbstractProp>
    + setHp(int hp):void
    + setMaxHp(int maxHp):void
}

class BossEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + update():void
    + getProps():List<AbstractProp>
}

class EliteEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + getProps():List<AbstractProp>
}

class ElitePlusEnemy {
    - score:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<BaseBullet>
    + getScore():int
    + update():void
    + getProps():List<AbstractProp>
}

class MobEnemy {
    - score:int
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getScore:int
    + getProps:List<AbstractProp>
}

interface EnemyFactory {
    + {abstract} createEnemy(): EnemyAircraft
}

class MobEnemyFactory {
    + createEnemy(): EnemyAircraft
}

class EliteEnemyFactory {
    + createEnemy(): EnemyAircraft
}

class ElitePlusEnemyFactory {
    + createEnemy(): EnemyAircraft
}

class BossEnemyFactory {
    + createEnemy(): EnemyAircraft
}

EnemyAircraft <|-- MobEnemy
EnemyAircraft <|-- EliteEnemy
EnemyAircraft ..> AbstractProp

EnemyFactory <|.. MobEnemyFactory
EnemyFactory <|.. EliteEnemyFactory
EnemyFactory <|.. ElitePlusEnemyFactory
EnemyFactory <|.. BossEnemyFactory
ElitePlusEnemy ..> PropFactory
EliteEnemy ..> PropFactory
BossEnemy ..> PropFactory

EnemyFactory ..> EnemyAircraft

MobEnemyFactory ..> MobEnemy
EliteEnemyFactory ..> EliteEnemy
ElitePlusEnemyFactory ..> ElitePlusEnemy
BossEnemyFactory ..> BossEnemy

@enduml
